kubernetes-networks/canary/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary
spec:
  replicas: 3
  selector:
    matchLabels:
      app: canary
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavaible: 0
      maxSurge: 100%
  template:
    metadata:
      name: canary
      labels:
        app: canary
    spec:
      containers:
        - name: web
          image: aosipenko99/nginxdocker:latest
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
          livenessProbe:
            tcpSocket:
              port: 8000
          volumeMounts:
          - name: app
            mountPath: /app
          ports:
            - containerPort: 8000
      volumes:
        - name: app
          emptyDir: {}
